--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav>
     <div class="logo">
-      <img src="/images/logo.png" alt="logo">
+      <img src="logo.png" alt="logo">
     </div>
     <div class="search-inp">
       <input type="search" placeholder="Search...">
@@ -33,7 +33,7 @@
   </nav>
   <header>
     <div class="first">
-      <img src="/images/telegram-cloud-photo-size-4-5865030271257127646-y 1.png" alt="rasm">
+      <img src="telegram-cloud-photo-size-4-5865030271257127646-y 1.png" alt="rasm">
     </div>
     <div class="options">
       <p>Salatlar</p>
@@ -48,7 +48,7 @@
       <h1>Salatlar</h1>
       <div class="salad-cards">
         <div class="salad-card">
-          <img src="/images/foof4.jpg" alt="food">
+          <img src="foof4.jpg" alt="food">
          <div class="btn">
            <button type="submit">Qo'shish</button>           
          </div>
@@ -56,7 +56,7 @@
           <p>81.000</p>
         </div>
            <div class="salad-card">
-             <img src="/images/food.jpg" alt="food">
+             <img src="food.jpg" alt="food">
             <div class="btn">
            <button type="submit">Qo'shish</button>              
             </div>
@@ -64,7 +64,7 @@
           <p>81.000</p>
            </div>
          <div class="salad-card">
-           <img src="/images/food1.jpg" alt="food">
+           <img src="food1.jpg" alt="food">
           <div class="btn">
            <button type="submit">Qo'shish</button>            
           </div>
@@ -73,7 +73,7 @@
            
          </div>
          <div class="salad-card">
-           <img src="/images/food2.jpg" alt="food">
+           <img src="food2.jpg" alt="food">
           <div class="btn">
            <button type="submit">Qo'shish</button>            
           </div>
@@ -83,7 +83,7 @@
       </div>
       <div class="salad-cards-two">
         <div class="salad-card">
-          <img src="/images/food1.jpg" alt="food">
+          <img src="food1.jpg" alt="food">
          <div class="btn">
            <button type="submit">Qo'shish</button>           
          </div>
@@ -91,7 +91,7 @@
           <p>81.000</p>
         </div>
         <div class="salad-card">
-          <img src="/images/food2.jpg" alt="food">
+          <img src="food2.jpg" alt="food">
          <div class="btn">
            <button type="submit">Qo'shish</button>           
          </div>
@@ -99,7 +99,7 @@
           <p>81.000</p>
         </div>
         <div class="salad-card">
-          <img src="/images/foof5.jpg" alt="food">
+          <img src="foof5.jpg" alt="food">
          <div class="btn">
            <button type="submit">Qo'shish</button>           
          </div>
@@ -107,7 +107,7 @@
           <p>81.000</p>
         </div>
         <div class="salad-card">
-           <img src="/images/foof3.jpg" alt="food">
+           <img src="foof3.jpg" alt="food">
            <div class="btn">
            <button type="submit">Qo'shish</button>             
            </div>
@@ -121,7 +121,7 @@
     <div class="soups">
       
       <div class="soup-card">
-        <img src="/images/food.jpg" alt="food">
+        <img src="food.jpg" alt="food">
        <div class="btn">
            <button type="submit">Qo'shish</button>         
        </div>
@@ -129,7 +129,7 @@
        <p>98.000</p>
       </div>
       <div class="soup-card">
-       <img src="/images/food.jpg" alt="food">
+       <img src="food.jpg" alt="food">
       <div class="btn">
            <button type="submit">Qo'shish</button>        
       </div>
@@ -137,7 +137,7 @@
        <p>98.000</p>
       </div>    
       <div class="soup-card">
-        <img src="/images/food.jpg" alt="food">
+        <img src="food.jpg" alt="food">
        <div class="btn">
            <button type="submit">Qo'shish</button>         
        </div>
@@ -145,7 +145,7 @@
         <p>98.000</p>
       </div>
       <div class="soup-card">
-        <img src="/images/food.jpg" alt="food">
+        <img src="food.jpg" alt="food">
        <div class="btn">
            <button type="submit">Qo'shish</button>         
        </div>
@@ -153,7 +153,7 @@
         <p>98.000</p>
       </div>
       <div class="soup-card">
-        <img src="/images/food.jpg" alt="food">
+        <img src="food.jpg" alt="food">
        <div class="btn">
            <button type="submit">Qo'shish</button>         
        </div>
@@ -161,7 +161,7 @@
         <p>98.000</p>
       </div>
       <div class="soup-card">
-        <img src="/images/food.jpg" alt="food">
+        <img src="food.jpg" alt="food">
        <div class="btn">
            <button type="submit">Qo'shish</button>         
        </div>
@@ -169,14 +169,14 @@
         <p>98.000</p>
       </div> 
       <div class="soup-card">
-         <img src="/images/food.jpg" alt="food">
+         <img src="food.jpg" alt="food">
          <div class="btn">
            <button type="submit">Qo'shish</button>
          </div>
          <h2>Nisuaz Salati</h2>
          <p>98.000</p>
        </div> <div class="soup-card">
-          <img src="/images/food.jpg" alt="food">
+          <img src="food.jpg" alt="food">
           <div class="btn">
             <button type="submit">Qo'shish</button>
           </div>
@@ -188,7 +188,7 @@
   </header>
   <div class="container">  <footer>
     <div class="logo">
-      <img src="/images/logo.png" alt="/images/logo.jpg">
+      <img src="logo.png" alt="/images/logo.jpg">
     </div>
     <div class="short-links">
       <ul>
@@ -199,9 +199,9 @@
       </ul>
     </div>
     <div class="icons">
-      <img src="/images/lupa.svg"> <br>
-      <img src="/images/lupa.svg"><br>
-      <img src="/images/lupa.svg"><br>
+      <img src="lupa.svg"> <br>
+      <img src="lupa.svg"><br>
+      <img src="lupa.svg"><br>
     </div>
   </footer>
   </div>
